samples/_failures_safe/1761655820_b9d8b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8fa52b64.c: In function ‘main’:
./samples/SAFE/__tmp_8fa52b64.c:139:9: error: expected declaration or statement at end of input
  139 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8fa52b64.c:139:9: error: expected declaration or statement at end of input
